--- a/funfacts.html
+++ b/funfacts.html
@@ -105,6 +105,7 @@
                         <p class="card-text">
                             Norwegians invented skiing some 4000 years ago. The island of Rødøy, in northern Norway, is home to rock carvings of «a skier» that dates back 4000 years.
                         </p>
+                        <br><br><br><br><br>
                         <button class="card-btn">
                             Fun
                         </button>
@@ -120,6 +121,7 @@
                         <p class="card-text">
                             The Lærdal Tunnel is the world’s longest road tunnel at 24.5 km. It was opened in November 2000, and it is well-lit and pleasant to drive through.
                         </p>
+                        <br><br><br><br><br>
                         <button class="card-btn">
                             Infrastructure
                         </button>
@@ -129,11 +131,13 @@
 
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="tunnel.png" >
+                    <img class="card-img" src="funfact1.jpeg" >
                     <div class="card-content">
-                        <h1 class="card-header">The longest tunnel</h1>
+                        <h1 class="card-header">
+                            Staying eco-friendly
+                        </h1>
                         <p class="card-text">
-                            The Lærdal Tunnel is the world’s longest road tunnel at 24.5 km. It was opened in November 2000, and it is well-lit and pleasant to drive through.
+                            Norway’s oil and gas industry has powered the economy but it doesn’t power the nation’s homes. Around 98% of Norway’s domestic power usage is drawn from hydroelectric power plants.
                         </p>
                         <button class="card-btn">
                             Infrastructure
@@ -144,14 +148,14 @@
 
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="olympics.png" >
+                    <img class="card-img" src="nobel.png" >
                     <div class="card-content">
-                        <h1 class="card-header">Winter Olympics</h1>
+                        <h1 class="card-header">The Venue for peace prizes</h1>
                         <p class="card-text">
-                            Norway has won more medals in the Winter Olympics than any other country, with 368 to date since the first Winter Olympic Games were held in 1924.
+                            The Norwegian capital has been the proud venue of the Nobel Peace Prize ceremony every year (with just a few exceptions) since 1901.The other Nobel prizes in Chemistry, Literature, Physics and Physiology or Medicine are awarded in Stockholm, Sweden.
                         </p>
                         <button class="card-btn">
-                            Sports
+                            World
                         </button>
                     </div>
                 </div>
@@ -159,14 +163,15 @@
 
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="olympics.png" >
+                    <img class="card-img" src="remote.jpg" >
                     <div class="card-content">
-                        <h1 class="card-header">Winter Olympics</h1>
+                        <h1 class="card-header">Remote island</h1>
                         <p class="card-text">
-                            Norway has won more medals in the Winter Olympics than any other country, with 368 to date since the first Winter Olympic Games were held in 1924.
+                            But it may surprise you to learn that it’s not in the north! It’s actually on the other side of the world. Administered by Norway since 1929, Bouvet Island in the South Atlantic Ocean is Planet Earth’s most remote island.
                         </p>
+                        <br><br><br><br><br><br>
                         <button class="card-btn">
-                            Sports
+                            Geography
                         </button>
                     </div>
                 </div>
@@ -174,59 +179,17 @@
 
             <div class="grid-item">
                 <div class="card">
-                    <img class="card-img" src="olympics.png" >
+                    <img class="card-img" src="coast.jpg" >
                     <div class="card-content">
-                        <h1 class="card-header">Winter Olympics</h1>
+                        <h1 class="card-header">
+                            How long am I ?
+                        </h1>
                         <p class="card-text">
-                            Norway has won more medals in the Winter Olympics than any other country, with 368 to date since the first Winter Olympic Games were held in 1924.
+                            It’s known throughout the world for its jagged mountains and stunning fjords, but believe it or not, no-one knows for sure just how long Norway’s epic coast is.
                         </p>
+                        <br><br><br><br><br><br><br><br><br><br>
                         <button class="card-btn">
-                            Sports
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="grid-item">
-                <div class="card">
-                    <img class="card-img" src="olympics.png" >
-                    <div class="card-content">
-                        <h1 class="card-header">Winter Olympics</h1>
-                        <p class="card-text">
-                            Norway has won more medals in the Winter Olympics than any other country, with 368 to date since the first Winter Olympic Games were held in 1924.
-                        </p>
-                        <button class="card-btn">
-                            Sports
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="grid-item">
-                <div class="card">
-                    <img class="card-img" src="olympics.png" >
-                    <div class="card-content">
-                        <h1 class="card-header">Winter Olympics</h1>
-                        <p class="card-text">
-                            Norway has won more medals in the Winter Olympics than any other country, with 368 to date since the first Winter Olympic Games were held in 1924.
-                        </p>
-                        <button class="card-btn">
-                            Sports
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="grid-item">
-                <div class="card">
-                    <img class="card-img" src="olympics.png" >
-                    <div class="card-content">
-                        <h1 class="card-header">Winter Olympics</h1>
-                        <p class="card-text">
-                            Norway has won more medals in the Winter Olympics than any other country, with 368 to date since the first Winter Olympic Games were held in 1924.
-                        </p>
-                        <button class="card-btn">
-                            Sports
+                            Geography
                         </button>
                     </div>
                 </div>
