--- a/website.html
+++ b/website.html
@@ -20,6 +20,7 @@
         <p class="para">
             Norway
         </p>
+        <img src="flagofnorway.png" align="right" class="home-img">
     <div class="grid">
         <a class="card-btn" href="knowmore.html" target="_blank">
             know more about norway
@@ -28,7 +29,7 @@
             tourist places
         </a>
         <a class="card-btn" href="funfacts.html" target="_blank">
-            fun facts 
+            fun facts
         </a>
     </div>
     </body>
